# seedwright

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.sh  quickstart.sh  synthetic-data-creator-requirements.md
authoring/: README.md  pyproject.toml
authoring/src/seedwright_authoring/: __init__.py  artifacts.py  capability.py  catalog.py  compile.py  datatests.py  feedback.py  genspec.py  imported.py  loop.py  provider.py  rules.py  validate.py
authoring/tests/: golden.py  test_artifacts.py  test_catalog.py  test_compile.py  test_feedback.py  test_genspec.py  test_hardening.py  test_imported.py  test_judge.py  test_loop.py  test_provider.py  test_rules.py  test_sanity.py  test_temporal_authoring.py  test_validate.py
data-engine/: README.md  pyproject.toml
data-engine/src/seedwright_data_engine/: __init__.py  anthropic_provider.py  copilot_provider.py  engine.py  export.py  heuristic.py  server.py
data-engine/tests/: test_anthropic_provider.py  test_copilot_provider.py  test_engine.py  test_export.py  test_heuristic.py  test_preview_rows.py  test_sanity.py  test_server.py  test_suggest.py
docs/decisions/: 0001-open-decisions-and-build-strategy.md  0002-postgres-loader-design.md  0003-authoring-loop-design.md  0004-onprem-mcp-topology.md
docs/integrations/: copilot-cli.md
docs/journal/: 00-roadmap-and-testing.md  01-slice1-generation-library.md  02-slice2-postgres-loader.md  03-slice3-authoring-loop.md  04-onprem-topology.md
generation-library/: README.md  pyproject.toml
generation-library/src/seedwright_genlib/: __init__.py  dataset.py  determinism.py  generate.py  generators.py  loadplan.py  parquet.py  rng.py  schema.py  types.py
generation-library/tests/: test_dataset.py  test_determinism.py  test_generators.py  test_loadplan.py  test_parquet.py  test_rng.py  test_sanity.py  test_scale.py  test_table.py  test_temporal_generators.py  test_types.py
jdbc-mcp/: README.md  pom.xml
jdbc-mcp/src/main/java/io/seedwright/jdbcmcp/: BindValues.java  ConnectionRegistry.java  Dialect.java  DriverDirectoryLoader.java  Introspector.java  JdbcMcpApplication.java  JdbcTools.java  JsonlLoader.java  McpEndpointConfig.java  SafeSql.java  TypeMap.java
jdbc-mcp/src/main/resources/: application.yml
jdbc-mcp/src/test/java/io/seedwright/jdbcmcp/: ConnectionRegistryTest.java  DialectTest.java  DriverDirectoryLoaderTest.java  IntrospectorTest.java  JsonlLoaderTest.java  McpEndpointSmokeTest.java  SafeSqlTest.java
packaging/: README.md
packaging/conf/: application-offline.yml  application.yml  jdbc-mcp.yml
packaging/drivers/: README.md
postgres-loader/: README.md  pyproject.toml
postgres-loader/src/seedwright_pgloader/: __init__.py  copy.py  ddl.py  executor.py  pgtypes.py  plan.py  results.py  safesql.py  typecheck.py
postgres-loader/tests/: conftest.py  test_copy.py  test_ddl.py  test_executor_guard.py  test_executor_integration.py  test_namespace_for.py  test_pathsafety.py  test_pgtypes.py  test_plan.py  test_results.py  test_safesql.py  test_sanity.py  test_typecheck.py
server/: README.md  pom.xml
server/src/main/java/io/seedwright/server/: SeedwrightServerApplication.java
server/src/main/java/io/seedwright/server/config/: ServerConfig.java
server/src/main/java/io/seedwright/server/domain/: BlueprintEntity.java  BlueprintRepository.java  BlueprintService.java  DatasetEntity.java  DatasetRepository.java  JobEntity.java  JobRepository.java
server/src/main/java/io/seedwright/server/engine/: DataEngine.java  DataEngineProperties.java  McpDataEngine.java
server/src/main/java/io/seedwright/server/jobs/: JobManager.java
server/src/main/java/io/seedwright/server/loader/: LoaderClient.java  McpLoaderClient.java
server/src/main/java/io/seedwright/server/mcp/: ApiTools.java  McpApiConfig.java
server/src/main/java/io/seedwright/server/web/: BlueprintController.java  ConnectionsController.java  DatasetController.java  JobController.java
server/src/main/resources/: application.yml
server/src/main/resources/db/migration/: V1__init.sql  V2__materializations.sql  V3__provider.sql  V4__approval.sql
server/src/test/java/io/seedwright/server/: FakeDataEngine.java  FakeLoaderClient.java  MaterializationFlowTest.java  McpDataEngineLiveTest.java  PersistenceAcrossRestartTest.java  ProductMcpEndpointTest.java  ServerFlowTest.java
ui/: README.md  next.config.mjs  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/lib/: api.ts
