[project]
name = "seedwright-authoring"
version = "0.0.1"
description = "seedwright authoring loop — the model-agnostic evaluator-optimizer that authors Generator Artifacts (§3A, FR-E.1, FR-H.7). Offline-testable with a mock provider."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "seedwright-genlib",
    "pyarrow>=16",
]

[project.optional-dependencies]
# Real LLM adapters slot in later behind the provider abstraction (FR-H.7); MVP uses the mock.
providers = []

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.uv.sources]
seedwright-genlib = { path = "../generation-library", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seedwright_authoring"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
