[project]
name = "seedwright-genlib"
version = "0.0.1"
description = "seedwright Generation Library — the deterministic substrate that thin-glue generators target (FR-M)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=16",
    "numpy>=1.26",
    "faker>=25",
]

[project.optional-dependencies]
# Optional statistical-fidelity backend (FR-M.2 / OPEN-7) — added later, kept out of the core.
fidelity = []

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seedwright_genlib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: large-scale / performance tests (e.g. ~1M rows); included in full regression runs",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
