[project]
name = "seedwright-pgloader"
version = "0.0.1"
description = "seedwright Postgres loader — turns a Canonical Dataset (Parquet) + Load Plan into a scoped, idempotent, reversible Postgres load + teardown (FR-G, FR-L, FR-M.4)."
readme = "README.md"
# Pinned to 3.12 so psycopg[binary] wheels are guaranteed available.
requires-python = ">=3.12,<3.13"
dependencies = [
    # psycopg>=3.2 renders SQL Composables offline via .as_string(None) — the pure
    # SQL-generation layer uses psycopg.sql.Identifier/SQL for injection-safe composition
    # (no DB server needed to render). [binary] bundles libpq so no system Postgres is
    # required to run the offline unit tests; the executor uses the same psycopg for loads.
    "psycopg[binary]>=3.2",
    "pyarrow>=16",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seedwright_pgloader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires a live Postgres (set SEEDWRIGHT_TEST_PG_DSN); auto-skipped otherwise",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
